src/objects/dupcheck__dcAnalytics__c.object
<CustomObject>
    <fields>
        <fullName>dupcheck__AutoConvert__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Auto Convert Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__AutoMerge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Auto Merge Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__Convert__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Convert Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dupcheck__DeltaPrevented__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delta Prevention Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__DeltaRecords__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delta Records Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__DeltaSinglePrevented__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delta Single Prevention Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__DeltaSingleRecords__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delta Single Records Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__DirectConvert__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Direct Processing Convert Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__DirectMerge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Direct Processing Merge Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__JobFindDuplicates__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Job Find Duplicates Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__JobFindRecords__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Job Find Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__JobFind__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC Jobs Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__JobLocalFindDuplicates__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC Local Job Find Duplicates Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__JobLocalFindRecords__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC Local Job Find Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__JobLocalFind__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC Local Jobs Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__Merge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Merge Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__PreventionWarningOverride__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prevention Warning Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__QuickConvert__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quick Convert Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__QuickMerge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quick Merge Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__Web2LeadPrevented__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Web2Lead Prevented</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__Web2LeadRecords__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Web2Lead Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Duplicate Check Analytics</label>
    <nameField>
        <label>Duplicate Check Analytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duplicate Check Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>